// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentText renders with only the description 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-1 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: 'Poppins',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30104166666666665em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      description
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContentText renders with only the title 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
}

.emotion-1 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.334375em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.475em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30104166666666665em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Title
    </p>
  </div>
</DocumentFragment>
`;

exports[`ContentText renders with title and description 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 20px;
  }
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
}

.emotion-1 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.334375em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.475em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30104166666666665em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Title
    </p>
  </div>
  .emotion-0 {
  margin-bottom: 40px;
}

.emotion-1 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-1 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-1 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-1 {
    font-family: 'Poppins',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30104166666666665em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      description
    </p>
  </div>
</DocumentFragment>
`;
